fixed alignment

--- a/flames/flames.css
+++ b/flames/flames.css
@@ -23,6 +23,6 @@ div {
     background-color: rgba(247, 184, 184, 0.31);
     padding: 20px;
 }
-#demo {
+#print {
 text-align:center;
 }
